# qtpynodeeditor

./: .gitignore  pyproject.toml  requirements.txt
docs/source/: conf.py
qtpynodeeditor/: __init__.py  _version.py  base.py  connection.py  connection_geometry.py  connection_graphics_object.py  connection_painter.py  data_model_registry.py  enums.py  exceptions.py  flow_scene.py  flow_view.py  node.py  node_connection_interaction.py  node_data.py  node_geometry.py  node_graphics_object.py  node_painter.py  node_state.py  port.py  style.py  version.py
qtpynodeeditor/examples/: __init__.py  calculator.py  connection_colors.py  image.py  style.py
qtpynodeeditor/tests/: conftest.py  test_basic.py  test_examples.py
