[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 2 - Pre-Alpha", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "Python Qt node editor"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies", "optional-dependencies",]
keywords = []
name = "pyside6nodeeditor"
requires-python = ">=3.11"
[[project.authors]]
name = "Ken Lauer"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE"

[tool.setuptools_scm]
write_to = "qtpynodeeditor/_version.py"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "qtpynodeeditor*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"

[tool.ruff]
extend-ignore = ["F401", "E501", "B905"]
extend-select = [
  "A",
  "ASYNC",
  "UP",
  "I",
  "B",
  "ICN",
  "F",
  "RET",
  "SIM",
  "NPY",
  "PERF",
  "RUF",
  "PIE",
  "C4",
  "E", # pycodestyle
  "W", # pycodestyle
  "FA", # flake8-future-annotations
  "ISC", # flake8-implicit-str-concat
  "G", # flake8-logging-format
  "Q", # flake8-quotes
  "SLF", # flake8-self
]
fixable = ["ALL"]
line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.isort]
profile = "black"
